<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<EditTextPreference android:title="@string/servername"
		android:key="servername"
		android:summary="@string/servername_sum">
	</EditTextPreference>
	<com.nohkumado.teleIPX800.IntEditTextPreference android:title="@string/serverport"
		android:key="serverport"
		android:summary="@string/serverport_sum"
		android:numeric="integer"
		android:maxLength="6">
	</com.nohkumado.teleIPX800.IntEditTextPreference>
	<EditTextPreference android:title="@string/relai1_name"
		android:key="relai1_name">
	</EditTextPreference>
	<EditTextPreference android:title="@string/relai2_name"
		android:key="relai2_name">
	</EditTextPreference>
	<EditTextPreference android:title="@string/relai3_name"
		android:key="relai3_name">
	</EditTextPreference>
	<EditTextPreference android:title="@string/relai4_name"
		android:key="relai4_name">
	</EditTextPreference>
	<EditTextPreference android:title="@string/relai5_name"
		android:key="relai5_name">
	</EditTextPreference>
	<EditTextPreference android:title="@string/relai6_name"
		android:key="relai6_name">
	</EditTextPreference>
	<EditTextPreference android:title="@string/relai7_name"
		android:key="relai7_name">
	</EditTextPreference>
	<EditTextPreference android:title="@string/relai8_name"
		android:key="relai8_name">
	</EditTextPreference>
	<EditTextPreference android:title="@string/relai9_name"
		android:key="relai9_name">
	</EditTextPreference>
	<EditTextPreference android:title="@string/relai10_name"
		android:key="relai10_name">
	</EditTextPreference>
	<EditTextPreference android:title="@string/relai11_name"
		android:key="relai11_name">
	</EditTextPreference>
	<EditTextPreference android:title="@string/relai12_name"
		android:key="relai12_name">
	</EditTextPreference>
	<EditTextPreference android:title="@string/relai13_name"
		android:key="relai13_name">
	</EditTextPreference>
	<EditTextPreference android:title="@string/relai14_name"
		android:key="relai14_name">
	</EditTextPreference>
	<EditTextPreference android:title="@string/relai15_name"
		android:key="relai15_name">
	</EditTextPreference>
	<EditTextPreference android:title="@string/relai16_name"
		android:key="relai16_name">
	</EditTextPreference>

</PreferenceScreen>
